# woof

./: Cargo.toml
bark-btc-ark-swap/: Cargo.toml  btc-ark-swap.md
bark-btc-ark-swap/src/: commands.rs  lib.rs  relay.rs  state.rs  validation.rs
bark-cli/: Cargo.toml
bark/src/: lib.rs
bark/src/swap/: btc_ark.rs  mod.rs
docs/: adaptor-swap-protocol.md  btc-ark-swap.md
lib/src/: musig.rs
lib/src/arkoor/: mod.rs  package.rs
lib/src/arkoor/package/: adaptor.rs
lib/src/musig/: adaptor.rs
testing/tests/bark/: btc_ark_swap.rs  mod.rs
